# ticktick-mcp

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  glama.json  install.sh  pyproject.toml  server.py  setup_auth.py
.claude-plugin/: plugin.json
skill/: SKILL.md
skills/ticktick/: SKILL.md
ticktick_mcp/: server.py  setup_auth.py
